@@ -7,6 +7,7 @@ New features:
 - ask user to reload file if it is changed outside revelation
 
 Bugfixes:
+- workaround for gnome-python 2.9.x crasher bug in the session client
 - prefs, password generator and search dialogs are no longer modal
 
 
